force-app/main/default/objects/Opportunity/fields/Strategic__c.field-meta.xml
<CustomField>
    <fullName>Strategic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identify is the opportunity is Stategic opportunity or not</description>
    <label>Strategic</label>
    <type>Checkbox</type>
</CustomField>