force-app/main/default/objects/Opportunity/fields/System_Id_License_Numer__c.field-meta.xml
<CustomField>
    <fullName>System_Id_License_Numer__c</fullName>
    <label>System Id / License Numer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>