force-app/main/default/objects/Opportunity/fields/TCAS_Approved__c.field-meta.xml
<CustomField>
    <fullName>TCAS_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TCAS Approved?</label>
    <type>Checkbox</type>
</CustomField>