force-app/main/default/objects/Opportunity/fields/TCAS_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>TCAS_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TCAS Confirmed</label>
    <type>Checkbox</type>
</CustomField>