force-app/main/default/objects/Opportunity/fields/Territory_Policy_Compliant__c.field-meta.xml
<CustomField>
    <fullName>Territory_Policy_Compliant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Pursue Opportunity in-line with territory policy.</description>
    <label>Territory Policy Compliant</label>
    <type>Checkbox</type>
</CustomField>