force-app/main/default/objects/Opportunity/fields/Warranty_Period_Months__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Period_Months__c</fullName>
    <label>Warranty Period (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>