force-app/main/default/objects/Opportunity/fields/X3rd_Party_Buyouts_Required__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Buyouts_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identify if there is any buyouts required from 3rd parties</description>
    <label>3rd Party Buyouts Required</label>
    <type>Checkbox</type>
</CustomField>