force-app/main/default/objects/Opportunity/fields/YMA_CRM_Number__c.field-meta.xml
<CustomField>
    <fullName>YMA_CRM_Number__c</fullName>
    <description>Global One SMS YMA CRM Number. Added  to support reporting</description>
    <label>YMA CRM Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>