force-app/main/default/objects/Opportunity/recordTypes/Product.recordType-meta.xml
<RecordType>
    <fullName>Product</fullName>
    <active>true</active>
    <businessProcess>YODA Default Sales Process</businessProcess>
    <description>Tangible goods that provide customer benefit or satisfaction, such as hardware or ready made software applications.</description>
    <label>Product</label>
</RecordType>