force-app/main/default/objects/Opportunity/recordTypes/Project.recordType-meta.xml
<RecordType>
    <fullName>Project</fullName>
    <active>true</active>
    <businessProcess>YODA Default Sales Process</businessProcess>
    <description>A combination of products and/or paid services with a fixed scope and cost, such as control systems, analytical shelters, engineered solutions, and consulting projects.</description>
    <label>Project</label>
</RecordType>