force-app/main/default/objects/Opportunity/recordTypes/Recurring_Business.recordType-meta.xml
<RecordType>
    <fullName>Recurring_Business</fullName>
    <active>true</active>
    <businessProcess>YODA Default Sales Process</businessProcess>
    <description>Created for the YODA program</description>
    <label>Recurring Business</label>
</RecordType>