force-app/main/default/objects/Opportunity/validationRules/New_Product_Closed_Won.validationRule-meta.xml
<ValidationRule>
    <fullName>New_Product_Closed_Won</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT( $Setup.Bypass_Settings__c.Bypass_Validation_Rules__c ),
RecordType.DeveloperName = &apos;Product&apos;,
OR(
ISPICKVAL(StageName,&apos;Closed Won&apos;)),
/* ISPICKVAL(PRIORVALUE(StageName),&apos;Negotiate&apos;), */

OR (
ISBLANK(Customer_PO_Received__c),
NOT(PO_Approved__c),
NOT(	Order_Entry_Approved__c),
ISBLANK(Order_Entry_Date__c),
ISBLANK(SO_Number__c),
ISBLANK( Quotation_Issued__c),
NOT(Export_Control_Check__c),
ISBLANK(Quotation_Number__c),
NOT(Proposal_price_Authorized__c),
ISPICKVAL(Competition_Positioning__c,&quot;&quot;),
ISBLANK( RFQ_Received_Date__c),
ISBLANK(Application__c),
ISPICKVAL(Category_of_interest__c,&quot;&quot;),
ISBLANK( End_User__c),
ISBLANK(Amount)
)
)</errorConditionFormula>
    <errorMessage>Customer PO Received,
PO Approved,
Order Entry Approved,
Order Entry Date and
SO Number 
are mandatory fields to move to Closed Won stage.</errorMessage>
</ValidationRule>