force-app/main/default/objects/Opportunity/validationRules/New_Product_Propose_Quote.validationRule-meta.xml
<ValidationRule>
    <fullName>New_Product_Propose_Quote</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT( $Setup.Bypass_Settings__c.Bypass_Validation_Rules__c ),
RecordType.DeveloperName = &apos;Product&apos;,
 ISPICKVAL(StageName,&apos;Propose / Quote&apos;), 
/*  ISPICKVAL(PRIORVALUE(StageName),&apos;Propose / Quote&apos;), */
OR (

ISPICKVAL(Competition_Positioning__c,&quot;&quot;),
ISBLANK( RFQ_Received_Date__c),
ISBLANK(Application__c),
ISPICKVAL(Category_of_Interest__c,&quot;&quot;),
ISBLANK( End_User__c),
ISBLANK(Amount)
)
)</errorConditionFormula>
    <errorMessage>Competition Positioning,
RFQ Received Date and 
Application
are mandatory fields to move to Propose/Quote stage</errorMessage>
</ValidationRule>