force-app/main/default/objects/Opportunity/validationRules/New_Rule_Project_Closed_Won.validationRule-meta.xml
<ValidationRule>
    <fullName>New_Rule_Project_Closed_Won</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT( $Setup.Bypass_Settings__c.Bypass_Validation_Rules__c ),
RecordType.DeveloperName = &apos;Project&apos;,
ISPICKVAL(StageName,&apos;Closed Won&apos;),
OR (
ISPICKVAL(Commitment_Received__c,&quot;&quot;), 
ISBLANK(Customer_PO_Received__c),
NOT( Order_Entry_Approved__c),
NOT(PO_Approved__c),
ISBLANK(SO_Number__c),
ISBLANK( Quotation_Issued__c),
NOT(Export_Control_Check__c),
ISBLANK(Quotation_Number__c),
ISBLANK(Sequence_of_Events__c),
NOT(Proposal_price_Authorized__c),
ISPICKVAL(Competition_Positioning__c,&quot;&quot;),
ISBLANK( RFQ_Received_Date__c),
NOT(X3rd_Party_Buyouts_Required__c),
ISPICKVAL(Non_standard_Products_Approved__c,&quot;&quot;),
ISBLANK(Application__c),
ISPICKVAL(Category_of_Interest__c,&quot;&quot;),
ISBLANK( End_User__c),
ISBLANK(Amount)
)
)</errorConditionFormula>
    <errorMessage>Commitment Received,
Customer PO Received,
Order Entry Approved,
PO Approved and
SO Number
are mandatory fields to move to Close Won stage</errorMessage>
</ValidationRule>