force-app/main/default/objects/Opportunity/validationRules/New_Rule_Project_Develop.validationRule-meta.xml
<ValidationRule>
    <fullName>New_Rule_Project_Develop</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT( $Setup.Bypass_Settings__c.Bypass_Validation_Rules__c ),
RecordType.DeveloperName = &apos;Project&apos;,
ISPICKVAL(StageName,&apos;Develop&apos;),
OR (
ISPICKVAL(Category_of_Interest__c,&quot;&quot;),
ISBLANK( End_User__c),
ISPICKVAL(Project_Type__c,&quot;&quot;),
ISBLANK(Amount)
)
)</errorConditionFormula>
    <errorMessage>• Category of Interest • End User • Project Type and Amount
are mandatory fields to move to Develop stage.</errorMessage>
</ValidationRule>