force-app/main/default/objects/Opportunity/validationRules/New_Rule_Project_Negotiate.validationRule-meta.xml
<ValidationRule>
    <fullName>New_Rule_Project_Negotiate</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT( $Setup.Bypass_Settings__c.Bypass_Validation_Rules__c ),
RecordType.DeveloperName = &apos;Project&apos;,
ISPICKVAL(StageName,&apos;Negotiate&apos;),
OR (
ISBLANK( Quotation_Issued__c),
NOT(Export_Control_Check__c),
ISBLANK(Quotation_Number__c),
ISBLANK(Sequence_of_Events__c),
NOT(Proposal_price_Authorized__c),
ISPICKVAL(Competition_Positioning__c,&quot;&quot;),
ISBLANK( RFQ_Received_Date__c),
ISBLANK(Application__c),
ISPICKVAL(Category_of_interest__c,&quot;&quot;),
ISBLANK( End_User__c),
ISBLANK(Amount)
)
)</errorConditionFormula>
    <errorMessage>Quotation Issued,
Export Control Check,
Quotation Number,
Proposal price Authorized and
Sequence of Events
are mandatory fields to move to the Negotiate stage.</errorMessage>
</ValidationRule>