force-app/main/default/objects/Opportunity/validationRules/YODA_Closed_Win_Stage_Requires_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>YODA_Closed_Win_Stage_Requires_Reason</fullName>
    <active>false</active>
    <description>Enforce &quot;Closed Win Reason&quot; to understand how opportunities are won</description>
    <errorConditionFormula>AND (
ISPICKVAL(  StageName , &quot;Closed Won&quot;),
ISBLANK(  Win_Reason__c ),
NOT($Setup.Bypass_Settings__c.Bypass_Validation_Rules__c)
)</errorConditionFormula>
    <errorDisplayField>Win_Reason__c</errorDisplayField>
    <errorMessage>Enter details in the &quot;Win Reason&quot; field when setting the stage to &quot;Closed Won&quot;</errorMessage>
</ValidationRule>