force-app/main/default/objects/Opportunity/validationRules/YODA_Opportunity_Account_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>YODA_Opportunity_Account_Status</fullName>
    <active>true</active>
    <description>Prevent Lead conversion if the Account status is Closed. Created for YODA</description>
    <errorConditionFormula>AND(
  NOT( $Setup.Bypass_Settings__c.Bypass_Validation_Rules__c),
  ISCHANGED(StageName),
  TEXT(StageName) = &apos;Propose / Quote&apos;,
  OR (
    ISPICKVAL(Account.Status__c, &apos;Closed&apos;),
    ISPICKVAL(Account.Status__c, &apos;Pending&apos;),
    ISPICKVAL(Account.Credit_Rating__c , &apos;Blocked&apos;)
  )
)</errorConditionFormula>
    <errorMessage>An opportunity cannot move out of the &quot;Develop&quot; stage while the account&apos;s status is Pending or Closed or the credit rating is Blocked. Please reach out to sales operations.</errorMessage>
</ValidationRule>