force-app/main/default/objects/Opportunity/validationRules/YODA_Oppty_ClosedLost_Req_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>YODA_Oppty_ClosedLost_Req_Fields</fullName>
    <active>true</active>
    <description>Created for YODA.
Fields that are required for the &quot;Closed Lost&quot; stage of Opportunities in any record type.</description>
    <errorConditionFormula>AND(
NOT( $Setup.Bypass_Settings__c.Bypass_Validation_Rules__c ),
ISPICKVAL(StageName,&apos;Closed Lost&apos;),
ISPICKVAL(Close_Lost_Reason__c,&quot;&quot;)
)
/* AND(
NOT( $Setup.Bypass_Settings__c.Bypass_Validation_Rules__c ),
RecordType.DeveloperName = &apos;Product&apos;,
ISPICKVAL(PRIORVALUE(StageName),&apos;Closed Lost&apos;),
OR (
ISPICKVAL(StageName,&quot;&quot;),
ISPICKVAL(Close_Lost_Reason__c,&quot;&quot;)
)
)*/</errorConditionFormula>
    <errorMessage>To mark &apos;Closed Lost&apos; stage as complete, please ensure below key field is populated:
Closed Lost Reason.</errorMessage>
</ValidationRule>