force-app/main/default/objects/Opportunity/validationRules/YODA_OPPTY_Control_Backward_Path.validationRule-meta.xml
<ValidationRule>
    <fullName>YODA_OPPTY_Control_Backward_Path</fullName>
    <active>false</active>
    <description>YODA Validation to strictly control Back ward Sales path for all Record types
Deactivate as per - I-422449</description>
    <errorConditionFormula>CASE(
  TEXT(PRIORVALUE(StageName)),
  &apos;Identify (SAL)&apos;, 1,
  &apos;Qualify(SQL)&apos;, 2,
  &apos;Develop&apos;, 3,
  &apos;Propose / Quote&apos;, 4,
  &apos;Negotiate&apos;, 5,
  &apos;Closed Won&apos;, 6,
  &apos;Closed Lost&apos;, 7,
  &apos;Disqualify&apos;, 8, 0
) &gt; 
CASE(
  TEXT(StageName),
  &apos;Identify (SAL)&apos;, 1,
  &apos;Qualify(SQL)&apos;, 2,
  &apos;Develop&apos;, 3,
  &apos;Propose / Quote&apos;, 4,
  &apos;Negotiate&apos;, 5,
  &apos;Closed Won&apos;, 6,
  &apos;Closed Lost&apos;, 7,
  &apos;Disqualify&apos;, 8, 0
)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>Sales path does not allow Backward stages.</errorMessage>
</ValidationRule>