force-app/main/default/objects/Opportunity/validationRules/YODA_Oppty_Product_Develop_Req_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>YODA_Oppty_Product_Develop_Req_Fields</fullName>
    <active>true</active>
    <description>Created for YODA.
Fields that are required for the &quot;Develop&quot; stage of Opportunities in the &quot;Product&quot; record type.</description>
    <errorConditionFormula>AND(
NOT( $Setup.Bypass_Settings__c.Bypass_Validation_Rules__c ),
ISPICKVAL(StageName,&apos;Develop&apos;),
  OR (
     ISPICKVAL(Competition_Positioning__c,&quot;&quot;),
     ISBLANK( RFQ_Received_Date__c),
     ISBLANK(Application__c),
ISPICKVAL(Category_of_Interest__c,&quot;&quot;),
ISBLANK( End_User__c),
ISBLANK(Amount)
     )
)</errorConditionFormula>
    <errorMessage>To mark &apos;Develop&apos; stage as complete, please ensure below key fields are populated:
Competition Positioning, RFQ Received Date with &quot;Qualify(SQL)&quot; stage required fields.</errorMessage>
</ValidationRule>