force-app/main/default/objects/Opportunity/validationRules/YODA_Oppty_Product_Qualify_Req_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>YODA_Oppty_Product_Qualify_Req_Fields</fullName>
    <active>false</active>
    <description>Created for YODA.
Fields that are required for the &quot;Qualify&quot; stage of Opportunities in the &quot;Product&quot; record type.</description>
    <errorConditionFormula>AND(
NOT( $Setup.Bypass_Settings__c.Bypass_Validation_Rules__c ), 
RecordType.DeveloperName = &apos;Product&apos;,
OR(
/* ISPICKVAL(StageName,&apos;Qualify(SQL)&apos;),*/
ISPICKVAL(StageName,&apos;Qualify(SQL)&apos;)
), 
OR (
ISPICKVAL(Category_of_interest__c,&quot;&quot;),
ISBLANK( End_User__c),
ISBLANK(Amount)
)
)</errorConditionFormula>
    <errorMessage>To move to &apos;Qualify&apos; stage, please ensure these key fields are populated:
Category of Interest, End User, End User Country and Amount</errorMessage>
</ValidationRule>