force-app/main/default/objects/Opportunity/validationRules/YODA_Oppty_Product_Quote_Req_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>YODA_Oppty_Product_Quote_Req_Fields</fullName>
    <active>false</active>
    <description>Created for YODA.
Fields that are required for the &quot;Propose / Quote&quot; stage of Opportunities in the &quot;Product&quot; record type.</description>
    <errorConditionFormula>AND(
NOT( $Setup.Bypass_Settings__c.Bypass_Validation_Rules__c ),
RecordType.DeveloperName = &apos;Product&apos;,
 ISPICKVAL(StageName,&apos;Propose / Quote&apos;), 
/*  ISPICKVAL(PRIORVALUE(StageName),&apos;Propose / Quote&apos;), */
OR (
ISBLANK( Quotation_Issued__c),
NOT(Export_Control_Check__c),
ISBLANK(Quotation_Number__c),
NOT(Proposal_price_Authorized__c),
ISPICKVAL(Competition_Positioning__c,&quot;&quot;),
ISBLANK( RFQ_Received_Date__c),
ISBLANK(Application__c),
ISPICKVAL(Category_of_interest__c,&quot;&quot;),
ISBLANK( End_User__c),
ISBLANK(Amount)
)
)</errorConditionFormula>
    <errorMessage>To mark &apos;Propose / Quote&apos; stage, fill in these fields:
Amount, Application, Category of Interest, Competition Positioning, Export Control Check, Quotation Issued, Quotation Number, Proposal price Authorized and RFQ Received Date.</errorMessage>
</ValidationRule>