force-app/main/default/objects/Opportunity/validationRules/YODA_Product_Develop.validationRule-meta.xml
<ValidationRule>
    <fullName>YODA_Product_Develop</fullName>
    <active>true</active>
    <description>Created for YODA.
Fields that are required for the &quot;Develop&quot; stage of Opportunities in the &quot;Product&quot; record type.</description>
    <errorConditionFormula>AND(
NOT( $Setup.Bypass_Settings__c.Bypass_Validation_Rules__c ), 
RecordType.DeveloperName = &apos;Product&apos;,
OR(
/* ISPICKVAL(StageName,&apos;Develop&apos;),*/
ISPICKVAL(StageName,&apos;Develop&apos;)
), 
OR (
/* ISBLANK(Category_of_Interest__c), */
 ISBLANK(Category_of_Interest__c),
ISBLANK( End_User__c),
ISBLANK(Amount)
)
)</errorConditionFormula>
    <errorMessage>Category of Interest,
End User and 
Amount 
are mandatory fields to move to the Develop stage</errorMessage>
</ValidationRule>