force-app/main/default/objects/Opportunity/validationRules/YODA_Project_Develop.validationRule-meta.xml
<ValidationRule>
    <fullName>YODA_Project_Develop</fullName>
    <active>true</active>
    <description>Created for YODA.
Fields that are required for the &quot;Develop&quot; stage of Opportunities in the &quot;Project&quot; record type.</description>
    <errorConditionFormula>AND(
NOT( $Setup.Bypass_Settings__c.Bypass_Validation_Rules__c ),
RecordType.DeveloperName = &apos;Project&apos;,
ISPICKVAL(StageName,&apos;Develop&apos;),
OR (
ISBLANK(Category_of_Interest__c),
ISBLANK( End_User__c),
ISPICKVAL(Project_Type__c,&quot;&quot;), 
ISBLANK(Amount)
)
)</errorConditionFormula>
    <errorMessage>• Category of Interest • End User • Project Type and Amount
are mandatory fields to move to Develop stage.</errorMessage>
</ValidationRule>