force-app/main/default/objects/Opportunity/validationRules/YODA_Project_Propose.validationRule-meta.xml
<ValidationRule>
    <fullName>YODA_Project_Propose</fullName>
    <active>true</active>
    <description>Created for YODA.
Fields that are required for the &quot;Propose&quot; stage of Opportunities in the &quot;Project&quot; record type.</description>
    <errorConditionFormula>AND(
NOT( $Setup.Bypass_Settings__c.Bypass_Validation_Rules__c ),
RecordType.DeveloperName = &apos;Project&apos;,
ISPICKVAL(StageName,&apos;Propose / Quote&apos;),
OR (
ISPICKVAL(Competition_Positioning__c,&quot;&quot;),
ISBLANK( RFQ_Received_Date__c),
NOT(X3rd_Party_Buyouts_Required__c),
ISPICKVAL(Non_standard_Products_Approved__c,&quot;&quot;),
/*ISBLANK(Application__c),*/
ISPICKVAL(GMP_Category__c,&quot;&quot;),
ISBLANK(Category_of_Interest__c),
ISBLANK( End_User__c),
ISPICKVAL(Project_Type__c,&quot;&quot;),
ISBLANK(Amount)
)
)</errorConditionFormula>
    <errorMessage>Competition Positioning,
RFQ Received Date,
3rd Party Buyouts Required,
Non-standard Products Approved and
GMP Category
are mandatory fields to move to the Propose/Quote stage</errorMessage>
</ValidationRule>