force-app/main/default/objects/Opportunity/validationRules/YODA_Recurring_Closed_Won.validationRule-meta.xml
<ValidationRule>
    <fullName>YODA_Recurring_Closed_Won</fullName>
    <active>true</active>
    <description>Created for YODA.
Fields that are required for the &quot;Closed Won&quot; stage of Opportunities in the &quot;Recurring Business&quot; record type.</description>
    <errorConditionFormula>AND(
NOT( $Setup.Bypass_Settings__c.Bypass_Validation_Rules__c ),
RecordType.DeveloperName = &apos;Recurring_Business&apos;,
ISPICKVAL(StageName,&apos;Closed Won&apos;),
OR (
ISBLANK(Customer_PO_Received__c),
ISBLANK(SO_Number__c),
ISBLANK( Order_Entry_Date__c),
NOT(PO_Approved__c),
NOT(All_Authorization_re_Confirmed__c))
)</errorConditionFormula>
    <errorMessage>To mark &apos;Closed Won&apos; stage as complete, please ensure below key fields are populated:
• Customer PO Received
• SO Number
• Order Entry Date
• PO Approved
• All Authorization re-confirmed</errorMessage>
</ValidationRule>