force-app/main/default/objects/Opportunity/validationRules/YODA_Recurring_Negotiate.validationRule-meta.xml
<ValidationRule>
    <fullName>YODA_Recurring_Negotiate</fullName>
    <active>true</active>
    <description>Created for YODA.
Fields that are required for the &quot;Negotiate&quot; stage of Opportunities in the &quot;Recurring Business&quot; record type.</description>
    <errorConditionFormula>AND(
NOT( $Setup.Bypass_Settings__c.Bypass_Validation_Rules__c ),
RecordType.DeveloperName = &apos;Recurring_Business&apos;,
ISPICKVAL(StageName,&apos;Negotiate&apos;),
OR (
ISBLANK( Quotation_Issued__c),
ISBLANK(Quotation_Number__c),
NOT(Proposal_price_Authorized__c)
)
)</errorConditionFormula>
    <errorMessage>To mark &apos;Negotiate&apos; stage, fill in these fields:
• Quotation Issued
• Quotation Number
• Proposal Price Authorized</errorMessage>
</ValidationRule>