force-app/main/default/objects/Opportunity/validationRules/YODA_Recurring_ProposeQuote.validationRule-meta.xml
<ValidationRule>
    <fullName>YODA_Recurring_ProposeQuote</fullName>
    <active>true</active>
    <description>Created for YODA.
Fields that are required for the &quot;Propose/Quote&quot; stage of Opportunities in the &quot;Recurring Business&quot; record type.</description>
    <errorConditionFormula>AND(
NOT( $Setup.Bypass_Settings__c.Bypass_Validation_Rules__c ),
RecordType.DeveloperName = &apos;Recurring_Business&apos;,
ISPICKVAL(StageName,&apos;Propose / Quote&apos;),
OR (
NOT(X3rd_Party_Buyouts_Required__c),
NOT(Category_Authorized__c),
ISPICKVAL(Non_standard_Products_Approved__c,&quot;&quot;),
ISBLANK( RFQ_Received_Date__c),
ISBLANK( Bid_Due_Date__c)
)
)</errorConditionFormula>
    <errorMessage>To mark &apos;Develop&apos; stage as complete, please ensure with &quot;Propose/Quote&quot; stage required fields and below key fields are populated:
• 3rd Party Buy-outs Required
• Category Authorized
• Non-standard Products Approved
• RFQ Received Date
• Bid Due Date</errorMessage>
</ValidationRule>